--- a/package.json
+++ b/package.json
@@ -10,9 +10,11 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "@types/jest": "^29.5.8",
-    "@types/node": "^20.9.1",
+    "@types/node": "^20.9.2",
     "@types/react": "^18.2.37",
     "@types/react-dom": "^18.2.15",
+    "@types/redux-logger": "^3.0.12",
+    "babel-plugin-macros": "^3.1.0",
     "dotenv": "^16.3.1",
     "firebase": "^10.5.2",
     "react": "^18.2.0",
@@ -30,6 +32,7 @@
     "scss": "^0.2.4",
     "stripe": "^14.5.0",
     "styled-components": "^6.1.0",
+    "typed-redux-saga": "^1.5.0",
     "typescript": "^5.2.2",
     "web-vitals": "^2.1.4"
   },
