--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@types/react": "^18.2.37",
     "@types/react-dom": "^18.2.15",
     "@types/redux-logger": "^3.0.12",
+    "@types/styled-components": "^5.1.32",
     "babel-plugin-macros": "^3.1.0",
     "dotenv": "^16.3.1",
     "firebase": "^10.5.2",
